<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.musintimur.lorempicsumexplorer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/actionHomeToSettings"
            app:destination="@id/navigation_settings" />

    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="ru.musintimur.lorempicsumexplorer.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite">

        <action
            android:id="@+id/actionFavoritesToSettings"
            app:destination="@id/navigation_settings" />

    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ru.musintimur.lorempicsumexplorer.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>